--- a/.github/workflows/download-athbe.yml
+++ b/.github/workflows/download-athbe.yml
@@ -28,7 +28,8 @@ jobs:
           #curl -LO "https://github.com/fedora-remix-mobility/fedora-kiwi-descriptions/releases/download/2025-04-04/Fedora-SDM845-Remix.tar.xz"
           #wget "https://cloud.athbe.cn/f/6nSr/firmware.tar.gz"
           #wget  "http://kaixinit.com/wp-content/uploads/2025/09/firmware.tar.gz"
-          wget https://sourceforge.net/projects/waydroid/files/images/system/lineage/waydroid_arm64/lineage-20.0-20250809-GAPPS-waydroid_arm64-system.zip
+          #wget https://sourceforge.net/projects/waydroid/files/images/system/lineage/waydroid_arm64/lineage-20.0-20250809-GAPPS-waydroid_arm64-system.zip
+          wget https://sourceforge.net/projects/waydroid/files/images/vendor/waydroid_arm64/lineage-20.0-20250809-HALIUM_13-waydroid_arm64-vendor.zip
           pwd
           ls -ltrh
           
@@ -39,16 +40,16 @@ jobs:
       - name: Upload file
         uses: actions/upload-artifact@v4
         with:
-          name: lineage-20.0-20250809-GAPPS-waydroid_arm64-system.zip
-          path: ./lineage-20.0-20250809-GAPPS-waydroid_arm64-system.zip
+          name: lineage-20.0-20250809-HALIUM_13-waydroid_arm64-vendor.zip
+          path: ./lineage-20.0-20250809-HALIUM_13-waydroid_arm64-vendor.zip
 
       - name: Upload image to Release
         uses: ncipollo/release-action@main
         if: steps.compile.outputs.status == 'success' && !cancelled()
         with:
           tag: sdm845.config_${{ env.COMPILE_STARTINGTIME }}
-          artifacts: ./lineage-20.0-20250809-GAPPS-waydroid_arm64-system.zip
+          artifacts: ./lineage-20.0-20250809-HALIUM_13-waydroid_arm64-vendor.zip
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
           body: |
-            This is waydroid_arm64-system.zip_${{ env.LINUX_GITURL }}
+            This is waydroid_arm64-vendor.zip_${{ env.LINUX_GITURL }}
