--- a/.github/workflows/download-fedora.yml
+++ b/.github/workflows/download-fedora.yml
@@ -26,7 +26,7 @@ jobs:
         id: compile
         run: |
           #curl -LO "https://github.com/fedora-remix-mobility/fedora-kiwi-descriptions/releases/download/2025-04-04/Fedora-SDM845-Remix.tar.xz"
-          curl -LO "https://github.com/onesaladleaf/pocketblue/actions/runs/16616175944/artifacts/3646181383"
+          curl -LO "https://github.com/pocketblue/pocketblue/releases/download/42.20251015/pocketblue-oneplus-sdm845-phosh-42.7z"
           pwd
           ls -ltrh
           
@@ -36,16 +36,16 @@ jobs:
       - name: Upload file
         uses: actions/upload-artifact@v4
         with:
-          name: Fedora-SDM845-Remix
-          path: ./*.zip
+          name: pocketblue-oneplus-sdm845-phosh-42
+          path: ./*.7z
 
       - name: Upload image to Release
         uses: ncipollo/release-action@main
         if: steps.compile.outputs.status == 'success' && !cancelled()
         with:
-          tag: Fedora-SDM845-Remix_${{ env.COMPILE_STARTINGTIME }}
-          artifacts: ./*.zip
+          tag: pocketblue-oneplus-sdm845-phosh-42_${{ env.COMPILE_STARTINGTIME }}
+          artifacts: ./*.7z
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
           body: |
-            This is Fedora-SDM845-Remix_${{ env.LINUX_GITURL }}
+            This is pocketblue-oneplus-sdm845-phosh-42_${{ env.LINUX_GITURL }}
