--- a/.github/workflows/download-fedora.yml
+++ b/.github/workflows/download-fedora.yml
@@ -26,7 +26,7 @@ jobs:
         id: compile
         run: |
           #curl -LO "https://github.com/fedora-remix-mobility/fedora-kiwi-descriptions/releases/download/2025-04-04/Fedora-SDM845-Remix.tar.xz"
-          curl -LO "https://github.com/pocketblue/pocketblue/releases/download/43.20251121/pocketblue-oneplus-sdm845-phosh-43.7z"
+          curl -LO "https://sdk-repo.omprussia.ru/sdk/installers/5.1.6/5.1.6.110-release/AuroraSDK-BT/AuroraSDK-5.1.6.110-BT-release-windows-offline-25.09.25-10.19.25.exe"
           pwd
           ls -ltrh
           
@@ -36,16 +36,16 @@ jobs:
       - name: Upload file
         uses: actions/upload-artifact@v4
         with:
-          name: pocketblue-oneplus-sdm845-phosh-43
-          path: ./*.7z
+          name: AuroraSDK-BT
+          path: ./*.exe
 
       - name: Upload image to Release
         uses: ncipollo/release-action@main
         if: steps.compile.outputs.status == 'success' && !cancelled()
         with:
-          tag: pocketblue-oneplus-sdm845-phosh-43_${{ env.COMPILE_STARTINGTIME }}
+          tag: AuroraSDK-BT3_${{ env.COMPILE_STARTINGTIME }}
           artifacts: ./*.7z
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
           body: |
-            This is pocketblue-oneplus-sdm845-phosh-43_${{ env.LINUX_GITURL }}
+            This is AuroraSDK-BT_${{ env.LINUX_GITURL }}
