--- a/.github/workflows/download-fedora.yml
+++ b/.github/workflows/download-fedora.yml
@@ -26,8 +26,9 @@ jobs:
         id: compile
         run: |
           #curl -LO "https://github.com/fedora-remix-mobility/fedora-kiwi-descriptions/releases/download/2025-04-04/Fedora-SDM845-Remix.tar.xz"
-          curl -LO "https://sdk-repo.omprussia.ru/sdk/installers/5.1.6/5.1.6.110-release/AuroraSDK-BT/AuroraSDK-5.1.6.110-BT-release-windows-offline-25.09.25-10.19.25.exe"
+          curl -LO "https://sdk-repo.omprussia.ru/sdk/installers/5.2.0/5.2.0.75-release/AuroraSDK-BT/AuroraSDK-5.2.0.75-BT-release-windows-offline-25.10.29-18.59.46.exe"
           pwd
+          zip AuroraSDK-5.2.0.75-BT.zip AuroraSDK-5.2.0.75-BT-release-windows-offline-25.10.29-18.59.46.exe
           ls -ltrh
           
           echo "::set-output name=status::success"
@@ -37,14 +38,14 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: AuroraSDK-BT
-          path: ./*.exe
+          path: ./*.zip
 
       - name: Upload image to Release
         uses: ncipollo/release-action@main
         if: steps.compile.outputs.status == 'success' && !cancelled()
         with:
           tag: AuroraSDK-BT3_${{ env.COMPILE_STARTINGTIME }}
-          artifacts: ./*.7z
+          artifacts: ./*.zip
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
           body: |
