--- a/.github/workflows/download-fedora.yml
+++ b/.github/workflows/download-fedora.yml
@@ -28,7 +28,7 @@ jobs:
           #curl -LO "https://github.com/fedora-remix-mobility/fedora-kiwi-descriptions/releases/download/2025-04-04/Fedora-SDM845-Remix.tar.xz"
           curl -LO "https://sdk-repo.omprussia.ru/sdk/installers/5.2.0/5.2.0.75-release/AuroraSDK-BT/AuroraSDK-5.2.0.75-BT-release-windows-offline-25.10.29-18.59.46.exe"
           pwd
-          zip AuroraSDK-5.2.0.75-BT.zip AuroraSDK-5.2.0.75-BT-release-windows-offline-25.10.29-18.59.46.exe
+          gzip -9 AuroraSDK-5.2.0.75-BT-release-windows-offline-25.10.29-18.59.46.exe
           ls -ltrh
           
           echo "::set-output name=status::success"
@@ -38,14 +38,14 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: AuroraSDK-BT
-          path: ./*.zip
+          path: ./*.gz
 
       - name: Upload image to Release
         uses: ncipollo/release-action@main
         if: steps.compile.outputs.status == 'success' && !cancelled()
         with:
           tag: AuroraSDK-BT3_${{ env.COMPILE_STARTINGTIME }}
-          artifacts: ./*.zip
+          artifacts: ./*.gz
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
           body: |
