--- a/.github/workflows/download-fedora.yml
+++ b/.github/workflows/download-fedora.yml
@@ -45,7 +45,7 @@ jobs:
         if: steps.compile.outputs.status == 'success' && !cancelled()
         with:
           tag: sailfishos-5.0.0.67-20260214-enchilada-STABLE6-SLOT_a_${{ env.COMPILE_STARTINGTIME }}
-          artifacts: ./*.7z
+          artifacts: ./*.zip
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
           body: |
